2007-Sep-30  Heikki Junnila <hjunnila@users.sf.net>
	* Converted VCXYPad to use VCWidget as parent instead of QFrame.

2007-Sep-29  Heikki Junnila <hjunnila@users.sf.net>
	* Finished VCSlider saveXML
	* Finished VCSlider loadXML
	* Fixed non-updating level low&high spins in VCSliderPropertiesx

2007-Sep-29  Heikki Junnila <hjunnila@users.sf.net>
	* Added new channel groups: Prism, Maintenance, Shutter & Nothing
	* Updated all fixture defs' channel groupings
	* Fixed control byte setting in QLCChannel::operator=
	* Updated VCSlider's channel saving
	* Removed KApplicationNameShort from fixture editor
	* Updated fixture editor's about box

2007-Sep-24  Heikki Junnila <hjunnila@users.sf.net>
	* Created implementation for All, None & Invert slots to VCSliderProperties
	* Set level list sorting by range in VCSliderProperties
	* Slight improvement to VCSlider::setCaption()

2007-Sep-24  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed Martin MiniMac Profile's channel groups
	* Fixed Futurelight DJScan250's channel groups
	* Added tooltips to spin boxes in VCSliderProperties dialog
	* Added empty slots for All, None and Invert in VCSliderProperties

2007-Sep-23  Heikki Junnila <hjunnila@users.sf.net>
	* Added a check in VCFrame::scram() to prevent bottom frame deletion.
	* Removed VCFrame::init()

2007-Sep-23  Heikki Junnila <hjunnila@users.sf.net>
	* Created VCSlider, a refactored version of VCDockSlider.
	* Created properties dialog for VCSlider.
	* Added type getter to Fixture.
	* Added a grouplist getter to QLCChannel.

2007-Sep-13  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed VCLabel's Y coordinate calcculation to take
	  QFontMetrics::leading() into account.
	* Changed VCLabel's default size.
	* Added case handling for adding a VCLabel to a VCFrame.

2007-Sep-13  Heikki Junnila <hjunnila@users.sf.net>
	* Created VCWidget master class for other VC widgets
	* Changed VCLabel and VCFrame to inherit VCWidget

2007-Sep-12  Heikki Junnila <hjunnila@users.sf.net>